--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/common": "^11.0.16",
+    "@nestjs/core": "^11.0.16",
+    "@nestjs/platform-express": "^11.0.16",
+    "@nrwl/nest": "^19.8.4",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
@@ -15,11 +16,11 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
+    "@nestjs/testing": "^11.0.16",
     "@nx/eslint": "20.7.2",
     "@nx/eslint-plugin": "20.7.2",
     "@nx/jest": "20.7.2",
-    "@nx/js": "20.7.2",
+    "@nx/js": "^20.7.2",
     "@nx/nest": "20.7.2",
     "@nx/node": "20.7.2",
     "@nx/web": "20.7.2",
