--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@cms-project/customer-domain": ["customer-domain/src/index.ts"]
+      "@cms-project/customer-domain": ["customer-domain/src/index.ts"],
+      "@cms-project/order-domain": ["order-domain/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
