--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@cms-project/customer-domain": ["customer-domain/src/index.ts"],
       "@cms-project/order-application": ["order-application/src/index.ts"],
       "@cms-project/order-domain": ["order-domain/src/index.ts"],
+      "@cms-project/payment-application": ["payment-application/src/index.ts"],
       "@cms-project/payment-domain": ["payment-domain/src/index.ts"]
     }
   },
