--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "dependencies": {
     "@nestjs/common": "^11.0.16",
     "@nestjs/core": "^11.0.16",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/platform-express": "^11.0.16",
+    "@nestjs/typeorm": "^11.0.0",
     "@nrwl/nest": "^19.8.4",
     "axios": "^1.6.0",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
