--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^11.0.16",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.16",
     "@nestjs/cqrs": "^11.0.3",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.16",
     "@nestjs/typeorm": "^11.0.0",
     "@nrwl/nest": "^19.8.4",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -33,8 +39,10 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/passport-jwt": "^4.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^29.7.0",
