--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
