--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nrwl/nest": "^19.8.4",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
