--- a/libs/payment-domain/tsconfig.lib.json
+++ b/libs/payment-domain/tsconfig.lib.json
@@ -11,6 +11,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../payment-application/src/lib/services/mock-payment.service.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
